--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   call_log: ^4.0.0
   get: ^4.6.5
   flutter_spinkit: ^5.2.0
+  flutter_pin_code_fields: ^2.2.0
+  device_info_plus: ^9.0.2
+
 
   callify_kit:
     path: ../
@@ -65,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
