--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   flutter_pin_code_fields: ^2.2.0
   device_info_plus: ^9.0.2
+  awesome_dialog: ^3.1.0
 
 
   callify_kit:
