--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: callify_kit
-description: Callify Kit for Android and iOS with verification method of Miss Call, Voice OTP, SMS and WhatsApp OTP
-version: 0.0.4
+description: Callify Kit for Android and iOS with verification method of Callify OTP, Miss Call, Voice OTP, SMS and WhatsApp OTP
+version: 0.0.5
 homepage: https://github.com/rajafareed/callify_kit
 
 environment:
